--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
-  url_launcher: ^5.5.2
-  cloud_firestore: ^0.14.0+2
-  provider: ^4.3.2+1
-  firebase_auth: ^0.18.0+1
+  cupertino_icons: ^1.0.3
+  url_launcher: ^6.0.4
+  cloud_firestore: ^2.2.0
+  provider: ^5.0.0
+  firebase_auth: ^1.2.0
 
 dev_dependencies:
   flutter_test:
