--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,9 @@ dependencies:
   cupertino_icons: ^1.0.3
   firebase_auth: ^1.2.0
   firebase_storage: ^8.1.1
+  image_picker: ^0.8.0+1
   intl: ^0.17.0
+  permission_handler: ^8.0.1
   provider: ^5.0.0
   url_launcher: ^6.0.4
 
