--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  cached_network_image: ^3.0.0
   cloud_firestore: ^2.2.0
   cupertino_icons: ^1.0.3
   firebase_auth: ^1.2.0
@@ -30,6 +31,7 @@ dependencies:
   image_picker: ^0.8.0+1
   intl: ^0.17.0
   permission_handler: ^8.0.1
+  photo_view: ^0.11.1
   provider: ^5.0.0
   url_launcher: ^6.0.4
 
